--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
     </section>
 
     <section class="section-features">
-      <h1>Features</h1>
+      <div class="contenedor-titulo titulo-H">
+        <h1>Destacados</h1>
+        <span class="titulo-categoria">- Para hombre</span>
+      </div>
 
-      <div class="features-grid">
-        <div class="features-card">
-          <img src="" alt="" class="feature-card-img" />
-          <h3 class="feature-card-title"></h3>
-        </div>
+      <div class="contenedor-titulo titulo-M">
+        <h1>Destacados</h1>
+        <span class="titulo-categoria">- Para mujer</span>
       </div>
     </section>
 
