Creacion del menu, con la estructura y funcionalidad completa, estilos aun no terminados

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </a>
 
       <div class="header-mobile-nav">
-        <button class="header-btns-nav">
+        <button class="header-btns-nav header-btn-menu">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
@@ -68,6 +68,44 @@
         </a>
       </div>
     </header>
+
+    <!-- menu que se muestra al hacer click en icono de barras en el header -->
+    <div class="menu-mobile">
+      <div class="menu-title">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="close-icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          />
+        </svg>
+        <h3>Categorias</h3>
+      </div>
+
+      <div class="menu-accordion">
+        <button>Hombre</button>
+        <button>Mujer</button>
+      </div>
+
+      <div class="menu-accordion">
+        <a href="#">Playeras</a>
+        <a href="#">Relojes</a>
+        <a href="#">Zapatos</a>
+      </div>
+
+      <div class="menu-accordion">
+        <a href="#">Vestidos</a>
+        <a href="#">Joyas</a>
+        <a href="#">Zapatos</a>
+      </div>
+    </div>
 
     <!-- Seccion principal donde se muestran imagenes con texto -->
     <section class="section-portada">
@@ -156,12 +194,12 @@
 
     <section class="section-features">
       <div class="contenedor-titulo titulo-H">
-        <h1>Destacados</h1>
+        <h2>Destacados</h2>
         <span class="titulo-categoria">- Para hombre</span>
       </div>
 
       <div class="contenedor-titulo titulo-M">
-        <h1>Destacados</h1>
+        <h2>Destacados</h2>
         <span class="titulo-categoria">- Para mujer</span>
       </div>
     </section>
@@ -290,12 +328,8 @@
         </p>
 
         <p class="footer-contact-p">
-          O llamanos para cualquier duda al <br />
-          <a href="tel:+1234567890">+1 234 567 890</a>
-        </p>
-
-        <p class="footer-contact-p">
-          Envianos un correo a <br />
+          Contacto <br />
+          <a href="tel:+1234567890">+1 234 567 890</a> <br />
           <a href="mailto:contacto@icon.com">contacto@icon.com</a>
         </p>
       </div>
