Estilos terminados para el menu en mobil

--- a/index.html
+++ b/index.html
@@ -90,20 +90,145 @@
       </div>
 
       <div class="menu-accordion">
-        <button>Hombre</button>
-        <button>Mujer</button>
+        <button class="menu-acc-btn">
+          Hombre
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="menu-category-icons"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m5.25 4.5 7.5 7.5-7.5 7.5m6-15 7.5 7.5-7.5 7.5"
+            />
+          </svg>
+        </button>
+
+        <div class="menu-accordion-categorias">
+          <a href="#"
+            >Playeras
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+          <a href="#"
+            >Relojes
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+          <a href="#"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+        </div>
       </div>
 
       <div class="menu-accordion">
-        <a href="#">Playeras</a>
-        <a href="#">Relojes</a>
-        <a href="#">Zapatos</a>
-      </div>
+        <button class="menu-acc-btn">
+          Mujer
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="menu-category-icons"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m5.25 4.5 7.5 7.5-7.5 7.5m6-15 7.5 7.5-7.5 7.5"
+            />
+          </svg>
+        </button>
 
-      <div class="menu-accordion">
-        <a href="#">Vestidos</a>
-        <a href="#">Joyas</a>
-        <a href="#">Zapatos</a>
+        <div class="menu-accordion-categorias">
+          <a href="#"
+            >Vestidos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+          <a href="#"
+            >Joyas
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+          <a href="#"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
 
@@ -327,11 +452,16 @@
           <a href="#">Acerca de nosotros</a>
         </p>
 
-        <p class="footer-contact-p">
-          Contacto <br />
-          <a href="tel:+1234567890">+1 234 567 890</a> <br />
-          <a href="mailto:contacto@icon.com">contacto@icon.com</a>
-        </p>
+        <div class="footer-contact-p footer-contact-info">
+          <span>CONTACTO</span>
+
+          <div class="footer-contacts">
+            <span>Telefono:</span>
+            <a href="tel:+1234567890">+1 234 567 890</a>
+            <span>Email:</span>
+            <a href="mailto:contacto@icon.com">contacto@icon.com</a>
+          </div>
+        </div>
       </div>
 
       <div class="footer-columns">
