Menu mobil terminado con su funcionalidad y estilos

--- a/index.html
+++ b/index.html
@@ -108,7 +108,23 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias">
+        <div class="menu-accordion-categorias hide">
+          <a href="#"
+            >Todo
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
           <a href="#"
             >Playeras
             <svg
@@ -179,7 +195,23 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias">
+        <div class="menu-accordion-categorias hide">
+          <a href="#"
+            >Todo
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
           <a href="#"
             >Vestidos
             <svg
