Mejora en la estructura de mi JS y cambio en el doc JS de tipo defer a tipo de modulo. Comienzo de enlaces a las diferentes categorias

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </button>
 
         <div class="menu-accordion-categorias hide">
-          <a href="#"
+          <a href="./categoriaTodosHombre.html"
             >Todo
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -125,6 +125,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Playeras
             <svg
@@ -141,6 +142,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Relojes
             <svg
@@ -157,6 +159,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Zapatos
             <svg
@@ -212,6 +215,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Vestidos
             <svg
@@ -228,6 +232,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Joyas
             <svg
@@ -244,6 +249,7 @@
               />
             </svg>
           </a>
+
           <a href="#"
             >Zapatos
             <svg
@@ -504,6 +510,7 @@
       </div>
     </footer>
 
-    <script defer src="./js/script.js"></script>
+    <!-- Cambio de defer a tipo modulo para exportar funciones -->
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
