Creando archivos JS de tipo modulo para poder usar funciones iguales en otros archivos JS, creando archivos nuevos archivos JS, HTML y agregando nueva info a elementos destacados

--- a/categoriaTodosHombre.html
+++ b/categoriaTodosHombre.html
@@ -260,5 +260,7 @@
         </div>
       </div>
     </div>
+
+    <script type="module" src="./js/categoriaTodosHombre.js"></script>
   </body>
 </html>
