Cambio de nombres: categoriaTodosHombre html y js, a categoriaPlantilla en html, css y js. Tambien seccion agregada en html de este archivo

--- a/categoriaPlantilla.html
+++ b/categoriaPlantilla.html
@@ -261,6 +261,52 @@
       </div>
     </div>
 
-    <script type="module" src="./js/categoriaTodosHombre.js"></script>
+    <section class="section-search-and-filter">
+      <input type="search" name="search-product" id="search-product" />
+
+      <div class="section-filter-container">
+        <h3>Filtra por</h3>
+
+        <div class="filter-btns-container">
+          <button class="filter-btns">
+            Precio
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="filter-icons"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5"
+              />
+            </svg>
+          </button>
+
+          <button class="filter-btns">
+            Rating
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="filter-icons"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <script type="module" src="./js/categoriaPlantilla.js"></script>
   </body>
 </html>
