--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </button>
 
         <div class="menu-accordion-categorias hide">
-          <a href="./categoriaTodosHombre.html"
+          <a href="./categoriaPlantilla.html"
             >Todo
             <svg
               xmlns="http://www.w3.org/2000/svg"
