Atributo data agregado a elementos anchors para usarlos en funciones de utilidad y navegar a las diferentes categorias dinamicamente

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <!-- Link para los estilos de esta pagina (index.html) -->
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Icon | Home</title>
+    <title>ICON | Home</title>
   </head>
 
   <body>
@@ -69,7 +69,7 @@
       </div>
     </header>
 
-    <!-- menu que se muestra al hacer click en icono de barras en el header -->
+    <!-- menu que se muestra al hacer click en icono de barras del header -->
     <div class="menu-mobile">
       <div class="menu-title">
         <svg
@@ -109,7 +109,7 @@
         </button>
 
         <div class="menu-accordion-categorias hide">
-          <a href="./categoriaPlantilla.html"
+          <a href="./categoriaPlantilla.html" data-categoria-id="todo-h"
             >Todo
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -126,7 +126,7 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shirts"
             >Playeras
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -143,7 +143,7 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="mens-watches"
             >Relojes
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -160,7 +160,7 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shoes"
             >Zapatos
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -199,7 +199,7 @@
         </button>
 
         <div class="menu-accordion-categorias hide">
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="todo-m"
             >Todo
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -216,7 +216,7 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-dresses"
             >Vestidos
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -233,7 +233,9 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a
+            href="./categoriaPlantilla.html"
+            data-categoria-id="womens-jewellery"
             >Joyas
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -250,7 +252,7 @@
             </svg>
           </a>
 
-          <a href="#"
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-shoes"
             >Zapatos
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -356,14 +358,18 @@
     </section>
 
     <section class="section-features">
-      <div class="contenedor-titulo titulo-H">
-        <h2>Destacados</h2>
-        <span class="titulo-categoria">- Para hombre</span>
+      <div class="titulo-H">
+        <div class="contenedor-titulo">
+          <h2>Destacados</h2>
+          <span class="titulo-categoria">- Para hombre</span>
+        </div>
       </div>
 
-      <div class="contenedor-titulo titulo-M">
-        <h2>Destacados</h2>
-        <span class="titulo-categoria">- Para mujer</span>
+      <div class="titulo-M">
+        <div class="contenedor-titulo">
+          <h2>Destacados</h2>
+          <span class="titulo-categoria">- Para mujer</span>
+        </div>
       </div>
     </section>
 
