Titulo agregado en categoriaPlantilla.html y mejora de displayCardProducts funcion

--- a/categoriaPlantilla.html
+++ b/categoriaPlantilla.html
@@ -322,7 +322,9 @@
       </div>
     </section>
 
-    <main></main>
+    <main>
+      <h2 class="main-h2">Producto</h2>
+    </main>
 
     <footer>
       <div class="footer-columns">
