Creando funcionalidad para buscar productos en el input search, editando funciones de utilidad y pequeñas ediciones de estilo

--- a/categoriaPlantilla.html
+++ b/categoriaPlantilla.html
@@ -265,18 +265,14 @@
     </div>
 
     <section class="section-search-and-filter">
-      <div class="section-search-container">
-        <div class="search-label-input-container">
-          <label for="search-product-input">Busca productos</label>
-          <input
-            type="search"
-            name="search-product"
-            id="search-product-input"
-            placeholder="Escribe aqui..."
-          />
-        </div>
-
-        <button class="search-btn">Buscar</button>
+      <div class="search-label-input-container">
+        <label for="search-product-input">Busca productos</label>
+        <input
+          type="search"
+          name="search-product"
+          id="search-product-input"
+          placeholder="Escribe aqui..."
+        />
       </div>
 
       <div class="section-filter-container">
@@ -324,6 +320,7 @@
 
     <main>
       <h2 class="main-h2">Producto</h2>
+      <section class="main-grid-container"></section>
     </main>
 
     <footer>
