Agregando nuevas categorias de productos, pequeñas ediciones en index.html y estilos. E inicios de funcionalidad para filtrar

--- a/categoriaPlantilla.html
+++ b/categoriaPlantilla.html
@@ -135,6 +135,23 @@
             </svg>
           </a>
 
+          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shoes"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
           <a href="./categoriaPlantilla.html" data-categoria-id="mens-watches"
             >Relojes
             <svg
@@ -151,9 +168,8 @@
               />
             </svg>
           </a>
-
-          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shoes"
-            >Zapatos
+          <a href="./categoriaPlantilla.html" data-categoria-id="sunglasses"
+            >Lentes
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -225,6 +241,23 @@
             </svg>
           </a>
 
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-shoes"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
           <a
             href="./categoriaPlantilla.html"
             data-categoria-id="womens-jewellery"
@@ -244,8 +277,25 @@
             </svg>
           </a>
 
-          <a href="./categoriaPlantilla.html" data-categoria-id="womens-shoes"
-            >Zapatos
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-watches"
+            >Relojes
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-bags"
+            >Bolsas
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -279,7 +329,7 @@
         <h3>Filtra por</h3>
 
         <div class="filter-btns-container">
-          <button class="filter-btns">
+          <button class="filter-btns filter-price-btn">
             Precio
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -297,8 +347,8 @@
             </svg>
           </button>
 
-          <button class="filter-btns">
-            Rating
+          <button class="filter-btns filter-rating-btn">
+            Reseñas
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
