--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
             </svg>
           </a>
 
+          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shoes"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
           <a href="./categoriaPlantilla.html" data-categoria-id="mens-watches"
             >Relojes
             <svg
@@ -159,9 +176,8 @@
               />
             </svg>
           </a>
-
-          <a href="./categoriaPlantilla.html" data-categoria-id="mens-shoes"
-            >Zapatos
+          <a href="./categoriaPlantilla.html" data-categoria-id="sunglasses"
+            >Lentes
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -233,6 +249,23 @@
             </svg>
           </a>
 
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-shoes"
+            >Zapatos
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
           <a
             href="./categoriaPlantilla.html"
             data-categoria-id="womens-jewellery"
@@ -252,8 +285,25 @@
             </svg>
           </a>
 
-          <a href="./categoriaPlantilla.html" data-categoria-id="womens-shoes"
-            >Zapatos
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-watches"
+            >Relojes
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+          </a>
+
+          <a href="./categoriaPlantilla.html" data-categoria-id="womens-bags"
+            >Bolsas
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -358,18 +408,22 @@
     </section>
 
     <section class="section-features">
-      <div class="titulo-H">
-        <div class="contenedor-titulo">
+      <div>
+        <header class="contenedor-titulo">
           <h2>Destacados</h2>
           <span class="titulo-categoria">- Para hombre</span>
-        </div>
+        </header>
+
+        <div class="titulo-H"></div>
       </div>
 
-      <div class="titulo-M">
-        <div class="contenedor-titulo">
+      <div>
+        <header class="contenedor-titulo">
           <h2>Destacados</h2>
           <span class="titulo-categoria">- Para mujer</span>
-        </div>
+        </header>
+
+        <div class="titulo-M"></div>
       </div>
     </section>
 
