--- a/categoriaPlantilla.html
+++ b/categoriaPlantilla.html
@@ -62,8 +62,8 @@
     </header>
 
     <!-- menu que se muestra al hacer click en icono de barras en el header -->
-    <div class="menu-mobile">
-      <div class="menu-title">
+    <aside class="menu-mobile">
+      <header class="menu-title">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -79,7 +79,7 @@
           />
         </svg>
         <h3>Categorias</h3>
-      </div>
+      </header>
 
       <div class="menu-accordion">
         <button class="menu-acc-btn">
@@ -100,7 +100,7 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias hide">
+        <nav class="menu-accordion-categorias hide">
           <a href="./categoriaPlantilla.html" data-categoria-id="todo-h"
             >Todo
             <svg
@@ -184,7 +184,7 @@
               />
             </svg>
           </a>
-        </div>
+        </nav>
       </div>
 
       <div class="menu-accordion">
@@ -206,7 +206,7 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias hide">
+        <nav class="menu-accordion-categorias hide">
           <a href="./categoriaPlantilla.html" data-categoria-id="todo-m"
             >Todo
             <svg
@@ -310,9 +310,9 @@
               />
             </svg>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </aside>
 
     <section class="section-search-and-filter">
       <div class="search-label-input-container">
