--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </header>
 
     <!-- menu que se muestra al hacer click en icono de barras del header -->
-    <div class="menu-mobile">
-      <div class="menu-title">
+    <aside class="menu-mobile">
+      <header class="menu-title">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -87,7 +87,7 @@
           />
         </svg>
         <h3>Categorias</h3>
-      </div>
+      </header>
 
       <div class="menu-accordion">
         <button class="menu-acc-btn">
@@ -108,7 +108,7 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias hide">
+        <nav class="menu-accordion-categorias hide">
           <a href="./categoriaPlantilla.html" data-categoria-id="todo-h"
             >Todo
             <svg
@@ -192,7 +192,7 @@
               />
             </svg>
           </a>
-        </div>
+        </nav>
       </div>
 
       <div class="menu-accordion">
@@ -214,7 +214,7 @@
           </svg>
         </button>
 
-        <div class="menu-accordion-categorias hide">
+        <nav class="menu-accordion-categorias hide">
           <a href="./categoriaPlantilla.html" data-categoria-id="todo-m"
             >Todo
             <svg
@@ -318,9 +318,9 @@
               />
             </svg>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </aside>
 
     <!-- Seccion principal donde se muestran imagenes con texto -->
     <section class="section-portada">
