Pagina de producto individual casi terminada con estructura, estilos y casi toda su funcionalidad js

--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
       </div>
     </section>
 
+    <!-- Seccion de productos destacados -->
     <section class="section-features">
       <div>
         <header class="contenedor-titulo">
