--- a/productoIndividual.html
+++ b/productoIndividual.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/productoIndividual.css" />
     <title>Icon | Producto</title>
   </head>
 
@@ -313,7 +314,192 @@
       </div>
     </aside>
 
-    <main></main>
+    <main>
+      <div class="imgs-container">
+        <img
+          loading="lazy"
+          class="main-img"
+          src=""
+          alt="imagen principal del producto"
+        />
+        <div class="inner-img-container"></div>
+      </div>
+
+      <section class="section-description-container">
+        <div class="descriptive-info-container">
+          <h2>Nombre del producto</h2>
+          <span class="info-element">Precio</span>
+        </div>
+
+        <div class="description-container">
+          <h3>Descripcion:</h3>
+          <p class="description-p">Descripcion</p>
+          <p class="description-p">Devolucion</p>
+          <p class="description-p">Garantia</p>
+        </div>
+
+        <button class="cart-btn">
+          Agrega al carrito
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="cart-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z"
+            />
+          </svg>
+        </button>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-columns">
+        <a class="footer-logo-container" href="#">
+          <img
+            src="./assets/fav-icon.png"
+            alt="fav-icon"
+            class="footer-icons"
+            loading="lazy"
+          />
+          <h1 class="footer-h1">ICON</h1>
+        </a>
+
+        <a href="https://www.facebook.com" target="_blank">
+          <svg
+            class="footer-icons"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0,0,256,256"
+          >
+            <g
+              fill="#ffffff"
+              fill-rule="nonzero"
+              stroke="none"
+              stroke-width="1"
+              stroke-linecap="butt"
+              stroke-linejoin="miter"
+              stroke-miterlimit="10"
+              stroke-dasharray=""
+              stroke-dashoffset="0"
+              font-family="none"
+              font-weight="none"
+              font-size="none"
+              text-anchor="none"
+              style="mix-blend-mode: normal"
+            >
+              <g transform="scale(5.12,5.12)">
+                <path
+                  d="M25,3c-12.15,0 -22,9.85 -22,22c0,11.03 8.125,20.137 18.712,21.728v-15.897h-5.443v-5.783h5.443v-3.848c0,-6.371 3.104,-9.168 8.399,-9.168c2.536,0 3.877,0.188 4.512,0.274v5.048h-3.612c-2.248,0 -3.033,2.131 -3.033,4.533v3.161h6.588l-0.894,5.783h-5.694v15.944c10.738,-1.457 19.022,-10.638 19.022,-21.775c0,-12.15 -9.85,-22 -22,-22z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+        </a>
+
+        <a href="https://www.instagram.com" target="_blank">
+          <svg
+            class="footer-icons"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0,0,256,256"
+          >
+            <g
+              fill="#ffffff"
+              fill-rule="nonzero"
+              stroke="none"
+              stroke-width="1"
+              stroke-linecap="butt"
+              stroke-linejoin="miter"
+              stroke-miterlimit="10"
+              stroke-dasharray=""
+              stroke-dashoffset="0"
+              font-family="none"
+              font-weight="none"
+              font-size="none"
+              text-anchor="none"
+              style="mix-blend-mode: normal"
+            >
+              <g transform="scale(5.12,5.12)">
+                <path
+                  d="M16,3c-7.17,0 -13,5.83 -13,13v18c0,7.17 5.83,13 13,13h18c7.17,0 13,-5.83 13,-13v-18c0,-7.17 -5.83,-13 -13,-13zM37,11c1.1,0 2,0.9 2,2c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,-1.1 0.9,-2 2,-2zM25,14c6.07,0 11,4.93 11,11c0,6.07 -4.93,11 -11,11c-6.07,0 -11,-4.93 -11,-11c0,-6.07 4.93,-11 11,-11zM25,16c-4.96,0 -9,4.04 -9,9c0,4.96 4.04,9 9,9c4.96,0 9,-4.04 9,-9c0,-4.96 -4.04,-9 -9,-9z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+        </a>
+
+        <a href="https://www.twitter.com" target="_blank">
+          <svg
+            class="footer-icons"
+            xmlns="http://www.w3.org/2000/svg"
+            x="0px"
+            y="0px"
+            width="100"
+            height="100"
+            viewBox="0,0,256,256"
+          >
+            <g
+              fill="#ffffff"
+              fill-rule="nonzero"
+              stroke="none"
+              stroke-width="1"
+              stroke-linecap="butt"
+              stroke-linejoin="miter"
+              stroke-miterlimit="10"
+              stroke-dasharray=""
+              stroke-dashoffset="0"
+              font-family="none"
+              font-weight="none"
+              font-size="none"
+              text-anchor="none"
+              style="mix-blend-mode: normal"
+            >
+              <g transform="scale(5.12,5.12)">
+                <path
+                  d="M11,4c-3.866,0 -7,3.134 -7,7v28c0,3.866 3.134,7 7,7h28c3.866,0 7,-3.134 7,-7v-28c0,-3.866 -3.134,-7 -7,-7zM13.08594,13h7.9375l5.63672,8.00977l6.83984,-8.00977h2.5l-8.21094,9.61328l10.125,14.38672h-7.93555l-6.54102,-9.29297l-7.9375,9.29297h-2.5l9.30859,-10.89648zM16.91406,15l14.10742,20h3.06445l-14.10742,-20z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+        </a>
+      </div>
+
+      <div class="footer-columns footer-contacto">
+        <p class="footer-contact-p">
+          <a href="#">Acerca de nosotros</a>
+        </p>
+
+        <div class="footer-contact-p footer-contact-info">
+          <span>CONTACTO</span>
+
+          <div class="footer-contacts">
+            <span>Telefono:</span>
+            <a href="tel:+1234567890">+1 234 567 890</a>
+            <span>Email:</span>
+            <a href="mailto:contacto@icon.com">contacto@icon.com</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-columns">
+        <p class="footer-contact-p"><a href="#">Terminos y condiciones</a></p>
+        <p class="footer-contact-p">
+          © 2025 ICON. Todos los derechos reservados.
+        </p>
+      </div>
+    </footer>
 
     <script type="module" src="./js/productoIndividual.js"></script>
   </body>
