--- a/carrito.html
+++ b/carrito.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/carrito.css" />
-    <title>Icon | Producto</title>
+    <title>ICON | CARRITO</title>
   </head>
 
   <body>
@@ -314,6 +314,74 @@
         </nav>
       </div>
     </aside>
+
+    <main>
+      <header>
+        <h2 class="flex">
+          CARRITO DE COMPRAS
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="header-icons"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+            />
+          </svg>
+        </h2>
+
+        <button class="flex delete-all-btn">
+          Elimina todo del carrito
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="trash-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+            />
+          </svg>
+        </button>
+      </header>
+
+      <section class="flex">
+        <div class="products-container"></div>
+
+        <div class="flex detail-prices-container">
+          <div class="flex price-detail-container">
+            <span>Total de productos:</span>
+            <span>0</span>
+          </div>
+
+          <div class="flex price-detail-container">
+            <span>Valor total:</span>
+            <span>0</span>
+          </div>
+
+          <div class="flex price-detail-container">
+            <span>Importe de envio</span>
+            <span>0</span>
+          </div>
+
+          <div class="flex price-detail-container">
+            <span class="total-price-container">TOTAL: </span>
+            <span class="total-price-container">0</span>
+          </div>
+
+          <a href="#" class="continue-to-pay-btn">Continuar a pagar</a>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <div class="footer-columns">
