Pagina carrito de compra terminado mientras que se edito la forma en como leer y editar la variable de shoppingCart, edicion de estilos y elementos html de carrito

--- a/carrito.html
+++ b/carrito.html
@@ -360,22 +360,22 @@
         <div class="flex detail-prices-container">
           <div class="flex price-detail-container">
             <span>Total de productos:</span>
-            <span>0</span>
+            <span class="quantity-products">0</span>
           </div>
 
           <div class="flex price-detail-container">
             <span>Valor total:</span>
-            <span>0</span>
+            <span class="price-before-taxes">0</span>
           </div>
 
           <div class="flex price-detail-container">
             <span>Importe de envio</span>
-            <span>0</span>
+            <span>10%</span>
           </div>
 
           <div class="flex price-detail-container">
             <span class="total-price-container">TOTAL: </span>
-            <span class="total-price-container">0</span>
+            <span class="total-price-container total-price">0</span>
           </div>
 
           <a href="#" class="continue-to-pay-btn">Continuar a pagar</a>
