Formulario de pago terminado y añadiendo modo estricto al proyecto

--- a/carrito.html
+++ b/carrito.html
@@ -378,7 +378,9 @@
             <span class="total-price-container total-price">0</span>
           </div>
 
-          <a href="#" class="continue-to-pay-btn">Continuar a pagar</a>
+          <a href="./formularioDePago.html" class="continue-to-pay-btn"
+            >Continuar a pagar</a
+          >
         </div>
       </section>
     </main>
