--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <!-- Link para los estilos de esta pagina (index.html) -->
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>ICON | Home</title>
+    <title>ICON | HOME</title>
   </head>
 
   <body>
